monticore-generator/src/test/resources/cocos/valid/ImplementInterfaceNTs.mc4
package cocos.valid;

grammar ImplementInterfaceNTs {
  interface A;

  B implements A;

  abstract C implements A;

}

