monticore-generator/src/test/resources/cocos/invalid/A2106/A2106c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2106;

grammar A2106c {
  abstract A;

  abstract B implements A;

}

